update barranavegacion.html with emergency fix

--- a/barranavegacion.html
+++ b/barranavegacion.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">  
    <meta http-equiv="X-UA-Compatible" content="IE=edge">  
    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-    <title>Barra de Navegacion</title>  
+    <title>Nueva y Mejorada Barra de Navegacion</title>  
    <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">  
    <link rel="stylesheet" href="barranavegacion.css">
    <link
